# ControlRep

./: .dockerignore  .gitignore  DEV_CONFIG.md  Dockerfile  EXCEL_STRUCTURE.md  PROJECT_PLAN.md  README.md  ROADMAP.md  analyze_excel.py  analyze_excel_final.ps1  analyze_excel_v2.ps1  daily_standup.md  railway.toml  render.yaml  run_tests.py  setup_dev.py  weekly_checklist.md
.claude/: settings.json  settings.local.json
backend/: .env.example  .gitignore  README.md  build.bat  cadastrar_matrizes_ausentes.py  cattle_control.spec  check_crias.py  fix_pai.py  fix_raca.py  fix_status.py  importar_toque_nov25.py  migrate_crias.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: chat.py  compradores.py  crias.py  dashboard.py  exames_toque.py  matrizes.py  parcerias.py  relatorios.py  reprodutores.py  sync.py  toques_matrizes.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  comprador.py  cria.py  desempenho.py  exame_toque.py  matriz.py  reprodutor.py  toque_matriz.py
backend/app/schemas/: __init__.py  comprador.py  cria.py  desempenho.py  exame_toque.py  matriz.py  reprodutor.py  toque_matriz.py
backend/app/services/: ipca.py
data/: Atualza Toque Nov-25.xlsx  cattle_control.xlsx  crias_normalizado.xlsx  template_crias.xlsx  ~$cattle_control.xlsx
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
scripts/: export_template.py  import_excel.py  import_normalizado.py  migrate_to_prod.py
(+11 files in other folders)
