[tool.poetry]
name = "cattle-control-api"
version = "0.1.0"
description = "API REST para sistema de controle de reprodução de rebanho Nelore"
authors = ["Seu Nome <email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dateutil = "^2.8.2"
openpyxl = "^3.11.0"
pandas = "^2.1.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
cors = "^1.0.1"
email-validator = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
flake8 = "^6.1.0"
isort = "^5.13.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
